--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <style>
       .iframe-container {
         width: 100%;
-        height: 0;
+        height: 100%;
         overflow: hidden;
         position: relative;
-        padding-top: 56.25%; /* 16:9 aspect ratio */
+        padding-top: 56.25%; 
       }
       .iframe-container iframe {
         position: absolute;
@@ -27,7 +27,7 @@
       }
       @media screen and (max-width: 767px) {
         .iframe-container {
-          padding-top: 100%; /* Adjust for mobile devices */
+          padding-top: 100%; 
         }
       }
     </style>
@@ -36,7 +36,6 @@
     <div class="page-wrapper">
       <div class="global-styles-wrapper">
         <div class="global-styles w-embed">
-          <!-- Include necessary styles -->
         </div>
       </div>
       <div class="navbar_parent" style="will-change: opacity; opacity: 1">
